--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,3 +1,38 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+form.sign-up-form input, form.sign-in-form input {
+    outline: none;
+    border: 1px solid; /* Sets the border width */
+    border-color: #f97316; /* Equivalent to 'border-orange-400' */
+    border-radius: 0.375rem; /* Equivalent to 'rounded-md' */
+    padding: 0.75rem; /* Equivalent to 'p-3' */
+}
+
+form.sign-up-form, form.sign-in-form {
+    display: flex;                  /* Equivalent to 'flex' */
+    flex-direction: column;         /* Equivalent to 'flex-col' */
+    justify-content: flex-start;    /* Equivalent to 'justify-start' */
+    background-color: white;        /* Equivalent to 'bg-white' */
+    border-style: solid;            /* Equivalent to 'border-solid' */
+    border-width: 2px;              /* Equivalent to 'border-2' */
+    border-color: white;            /* Equivalent to 'border-white' */
+    border-radius: 0.75rem;         /* Equivalent to 'rounded-xl' */
+    padding: 1.75rem;               /* Equivalent to 'p-7' */
+    gap: 1.25rem;                   /* Equivalent to 'space-y-5' */
+}
+
+button {
+    background-color: #f97316; /* Equivalent to 'bg-orange-400' */
+    border-radius: 0.375rem;  /* Equivalent to 'rounded-md' */
+    padding: 0.75rem;         /* Equivalent to 'p-3' */
+    transition: background-color 0.3s ease; /* Equivalent to 'transition' */
+    color: white;             /* To make text visible */
+    border: none;             /* Remove default button borders */
+    cursor: pointer;          /* Add a pointer cursor for hover effect */
+}
+
+button:hover {
+    background-color: #fb923c; /* Equivalent to 'hover:bg-orange-300' */
+}
